--- a/_dev/sass/home-page.scss
+++ b/_dev/sass/home-page.scss
@@ -57,7 +57,8 @@ main {
     opacity: 0.8;
     margin: auto;
     height: 100%;
-    width: 400px;
+    width: 100%;
+    max-width: 400px;
 }
 
 div.slideshow{
